feat(gateway): downgrade to Spring Boot 2.7 + JDK 8 + MyBatis-Plus
- Spring Boot 3.2.3 → 2.7.3, JDK 17 → 1.8
- spring-boot-starter-data-jpa → mybatis-plus-boot-starter:3.5.3.1
- 8 JPA entities → MyBatis-Plus entities (@TableName/@TableId)
- 8 JPA repositories → MyBatis-Plus BaseMapper interfaces
- jakarta.* → javax.* namespace migration
- httpclient5 → httpclient4 (Apache HttpClient 4.x)
- Java 8 compat: switch expressions, records, var, instanceof patterns
- Auto-fill timestamps via MetaObjectHandler
- Schema SQL (MySQL + H2) for MyBatis-Plus
- All 11 services and 13 tests adapted